test_suite/alan-2022-examples/failing/000560_mutation.alan
source R begin[5 then relax end end
